--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -1,6 +1,16 @@
 @raven-field-color: #a4f012;
 
 .sql-migration {
+
+    
+    .customizations {
+        font-size: 10px;
+        
+        
+        i + i {
+            padding-left: 5px;
+        }
+    }
     
     
     .filter-input {
