--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -47,6 +47,13 @@
     .panel-addon {
         font-size: 13px;
         line-height: 1.5;
+        position: relative;
+        
+        .table-warning {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
     }
     
     .btn-sm {
