--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/referenceUsageDialog.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/referenceUsageDialog.html
@@ -4,7 +4,7 @@
             <button type="button" class="close" data-bind="click: close" aria-hidden="true">
                 <i class="icon-cancel"></i>
             </button>
-            <h4 class="modal-title">Table is in use</h4>
+            <h4 class="modal-title">Incoming link references for table <strong data-bind="text: table.tableName"></strong></h4>
         </div>
         <div class="modal-body max-height">
             <p class="margin-bottom">Table <strong data-bind="text: table.tableName"></strong> is linked by following references:</p>
@@ -29,7 +29,7 @@
                                 skip
                             </button>
                             <button class="btn btn-sm"
-                                    data-bind="css: { 'btn-danger': action() === 'link' }, click: _.partial($root.onActionClicked, $data, 'link')">
+                                    data-bind="css: { 'btn-danger': $root.enforceNoLinks && action() === 'link', active: !$root.enforceNoLinks && action() === 'link' }, click: _.partial($root.onActionClicked, $data, 'link')">
                                 link
                             </button>
                             <button class="btn btn-sm"
@@ -42,14 +42,14 @@
                 </tbody>
             </table>
             
-            <p>
+            <p data-bind="visible: enforceNoLinks">
                 Select <strong>skip</strong> or <strong>embed</strong> on each reference before unselecting table.
             </p>
             
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-bind="click: close">Close</button>
-            <button type="button" class="btn btn-primary" data-bind="click: unselect, enable: allResolved">Unselect table</button>
+            <button type="button" class="btn btn-primary" data-bind="click: unselect, enable: allResolved, visible: enforceNoLinks">Unselect table</button>
         </div>
     </div>
 </div>
