--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/referenceUsageDialog.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/referenceUsageDialog.html
@@ -52,7 +52,7 @@
 <script type="text/html" id="in-use-reference-template">
     <div>
         <div data-bind="if: _.isUndefined(sourceTable.parentReference)">
-            <i class="icon-table"></i> <strong data-bind="text: sourceTable.tableName"></strong>
+            <a href="#" data-bind="click: _.partial($root.goToTable, sourceTable)"><i class="icon-table"></i> <strong data-bind="text: sourceTable.tableName"></strong></a>
         </div>
         <div data-bind="with: sourceTable.parentReference">
             <div data-bind="template: { name: 'in-use-reference-template' }"></div>
