RavenDB-11113 More robust files synchronization process
- added an option to reset file synchronization to all destinations (exposed in the studio as well)
- more logging around synchronization task
- retrying once we fail on creating or removing a syncing configuration

--- a/Raven.Studio.Html5/App/views/filesystem/status/status.html
+++ b/Raven.Studio.Html5/App/views/filesystem/status/status.html
@@ -17,7 +17,7 @@
 
 <div class="filesystems-page">
     <button class="btn btn-primary" data-bind="click: synchronizeNow" title="Sync Now (Alt+S)" accesskey="S"><i class="fa fa-refresh"></i> Sync Now</button>
-
+    <button class="btn btn-danger pull-right" data-bind="click: resetSynchronization" title="Reset (start from scratch)"><i class="fa fa-refresh"></i> Reset (start from scratch)</button>
     <br />
     <br />
 
